--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -609,6 +609,7 @@ At each fold the CRPS, MSE and quantile (as in Section \@ref(model-assessment)) 
 However, most of the time we expect aggregation to occur at the level of the data.
 If the link function $g$ is the identity or linear then the two are equivalent.
 On the other hand, for non-linear link functions $g$ such as the commonly used exponential or logistic, the generative model does not match the proposed data generating process.
+* Discussion of the overall area versus point question. Papers of Sam using point level.
 
 <!-- Add equations for mean $\mathbb{E}(y_i)$ and variance $\mathbb{V}(y_i)$ of under this model, as a function of $g$. -->
 <!-- Explain under what circumstances we believe this approximation to be acceptable. -->
