--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -12,7 +12,9 @@
 \begin{mclistof}{List of Abbreviations}{3.2cm}
 
 \item[HIV] Human Immunodeficiency Virus.
+\item[DALY] Disability Adjusted Life Year.
 \item[AIDS] Acquired ImmunoDeficiency Syndrome.
+\item[UNAIDS] The Joint United Nations Programme on HIV/AIDS.
 \item[PEPFAR] President’s Emergency Plan for AIDS Relief.
 \item[Global Fund] Global Fund to Fight AIDS, Tuberculosis, and Malaria.
 \item[HIV] Demographic and Health Surveys.
@@ -22,31 +24,42 @@
 \item[FSW] Female Sex Worker(s).
 \item[MSM] Men who have Sex with Men.
 \item[PWID] People Who Inject Drugs.
+\item[TGP] Transgender People
 \item[ANC] Antenatal Clinic.
-\item[UNAIDS] United Nations Joint Programme on HIV/AIDS.
 \item[CDC] Centers for Disease Control and Prevention.
 \item[UAT] Unlinked Anonymous Testing.
 \item[PMTCT] Prevention of Mother-to-Child Transmission.
 \item[PLHIV] People Living with HIV.
 \item[TaSP] Treatment as Prevention.
+\item[STI] Sexually Transmitted Infection.
+\item[ART] Antiretroviral Therapy.
+\item[VMMC] Voluntary Medical Male Circumcision.
+\item[DHS] Demographic and Health Surveys.
+\item[PHIA] Population-based HIV Impact Assessment.
 
 \item[MCMC] Markov Chain Monte Carlo.
+\item[NUTS] No-U-Turn Sampler.
 \item[VI] Variational Inference.
 \item[INLA] Integrated Nested Laplace Approximation.
 \item[GP] Gaussian Process.
 \item[CAR] Conditionally Auto-regressive.
 \item[ICAR] Intrisic Conditionally Auto-regressive.
-\item[ART] Antiretroviral Therapy.
 \item[SAE] Small-Area Estimation.
 \item[GMRF] Gaussian Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
 \item[GMRF] Gauss-Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
+\item[GLM] Generalised Linear Model.
+\item[GLMM] Generalised Linear Mixed effects Model.
 \item[LGM] Latent Gaussian Model.
 \item[ELGM] Extended Latent Gaussian Model.
+\item[BF] Bayes Factor.
 \item[DIC] Deviance Information Criterion.
 \item[BIC] Bayesian Information Criterion.
 \item[WAIC] Watanabe-Akaike Information Criterion.
+\item[SR] Scoring Rule.
+\item[SPSR] Strictly Proper Scoring Rule.
+\item[CRPS] Continuous Ranked Probability Score.
 \item[ESS] Effective Sample Size.
 \item[IID] Independent and Identically Distributed.
 \item[PPL] Probabilistic Programming Language.
