--- a/references.bib
+++ b/references.bib
@@ -403,9 +403,13 @@
 }
 
 @article{eaton2021naomi,
-  title={Naomi: A New Modelling Tool for Estimating HIV Epidemic Indicators at the District Level in Sub-Saharan Africa},
-  author={Eaton, Jeffrey W and Dwyer-Lindgren, Laura and Gutreuter, Steve and O’Driscoll, Megan and Stevens, Oliver and Bajaj, Sumali and Ashton, Rob and Hill, Alex and Russell, Emma and Esra, Rachel and Dolan, Nicolas and Anifowoshe, Yusuf L and Fellows, Ian and Glaubius, Rob and Haeuser, Emily and Okonek, Taylor and Stover, John and Thomas, Matthew L and Wakefield, Jon and Wolock, Tim and Berry, Jonathan and Sabala, Tomasz and Heard, Nate and Delgado, Stephen and Pantazis, Athena and Jahn, Andreas and Kalua, Thoko and Chimpandule, Tiwonge and Auld, Andrew and Kim, Evelyn and Payne, Danielle and Johnson, Leigh F and Fitzjohn, Rich and Wankyeki, Ian and Mahy, Mary and Shiraishi, Ray},
-  year={2021}
+  title={Naomi: a new modelling tool for estimating HIV epidemic indicators at the district level in sub-Saharan Africa},
+  author={Eaton, Jeffrey W and Dwyer-Lindgren, Laura and Gutreuter, Steve and O'Driscoll, Megan and Stevens, Oliver and Bajaj, Sumali and Ashton, Rob and Hill, Alexandra and Russell, Emma and Esra, Rachel and others},
+  journal={Journal of the International AIDS Society},
+  volume={24},
+  pages={e25788},
+  year={2021},
+  publisher={Wiley Online Library}
 }
 
 @article{elliott1992small,
@@ -605,7 +609,7 @@ URL= {https://www.r-inla.org/faq},
 @article{freni2018note,
   title={A note on intrinsic conditional autoregressive models for disconnected graphs},
   author={Freni-Sterrantino, Anna and Ventrucci, Massimo and Rue, H{\aa}vard},
-  journal={Spatial and spatio-temporal epidemiology},
+  journal={Spatial and Spatio-temporal Epidemiology},
   volume={26},
   pages={25--34},
   year={2018},
@@ -792,7 +796,7 @@ URL= {https://www.r-inla.org/faq},
 @article{breslow1993approximate,
   title={Approximate inference in generalized linear mixed models},
   author={Breslow, Norman E and Clayton, David G},
-  journal={Journal of the American statistical Association},
+  journal={Journal of the American Statistical Association},
   volume={88},
   number={421},
   pages={9--25},
@@ -808,11 +812,17 @@ URL= {https://www.r-inla.org/faq},
   year={1996}
 }
 
-@article{martino2019integrated,
-  title={Integrated nested Laplace approximations (INLA)},
-  author={Martino, Sara and Riebler, Andrea},
-  journal={arXiv preprint arXiv:1907.01248},
-  year={2019}
+@inbook{martino2020integrated,
+author = {Martino, Sara and Riebler, Andrea},
+publisher = {John Wiley \& Sons, Ltd},
+isbn = {9781118445112},
+title = {Integrated Nested Laplace Approximations (INLA)},
+booktitle = {Wiley StatsRef: Statistics Reference Online},
+chapter = {},
+pages = {1-19},
+doi = {https://doi.org/10.1002/9781118445112.stat08212},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781118445112.stat08212},
+year = {2020},
 }
 
 @inproceedings{skaug2009approximate,
@@ -867,7 +877,7 @@ URL= {https://www.r-inla.org/faq},
 @article{chen2014use,
   title={The use of sampling weights in Bayesian hierarchical models for small area estimation},
   author={Chen, Cici and Wakefield, Jon and Lumely, Thomas},
-  journal={Spatial and spatio-temporal epidemiology},
+  journal={Spatial and Spatio-temporal Epidemiology},
   volume={11},
   pages={33--43},
   year={2014},
@@ -877,7 +887,7 @@ URL= {https://www.r-inla.org/faq},
 @article{cohen2011prevention,
   title={Prevention of HIV-1 infection with early antiretroviral therapy},
   author={Cohen, Myron S and Chen, Ying Q and McCauley, Marybeth and Gamble, Theresa and Hosseinipour, Mina C and Kumarasamy, Nagalingeswaran and Hakim, James G and Kumwenda, Johnstone and Grinsztejn, Beatriz and Pilotto, Jose HS and others},
-  journal={New England journal of medicine},
+  journal={New England Journal of Medicine},
   volume={365},
   number={6},
   pages={493--505},
@@ -1286,7 +1296,7 @@ doi = {10.1201/9781420072884-c30}
 @article{gottlieb1981pneumocystis,
   title={Pneumocystis pneumonia—Los Angeles},
   author={Gottlieb, Michael S and Schanker, Howard M and Fan, Peng Thim and Saxon, Andrew and Weisman, Joel D and Pozalski, Irving and others},
-  journal={Mmwr},
+  journal={Morbidity and Mortality Weekly Report},
   volume={30},
   number={21},
   pages={1--3},
@@ -1381,17 +1391,10 @@ doi = {10.1201/9781420072884-c30}
   year={2013}
 }
 
-@article{sailynoja2021graphical,
-  title={Graphical Test for Discrete Uniformity and its Applications in Goodness of Fit Evaluation and Multiple Sample Comparison},
-  author={S{\"a}ilynoja, Teemu and B{\"u}rkner, Paul-Christian and Vehtari, Aki},
-  journal={arXiv preprint arXiv:2103.10522},
-  year={2021}
-}
-
 @article{blei2017variational,
   title={Variational inference: A review for statisticians},
   author={Blei, David M and Kucukelbir, Alp and McAuliffe, Jon D},
-  journal={Journal of the American statistical Association},
+  journal={Journal of the American Statistical Association},
   volume={112},
   number={518},
   pages={859--877},
@@ -1424,15 +1427,17 @@ doi = {10.1201/9781420072884-c30}
   year={2001}
 }
 
-
 @article{dempster1977maximum,
-  title={Maximum likelihood from incomplete data via the EM algorithm},
-  journal={Journal of the royal statistical society: series B (methodological)},
-  volume={39},
-  number={1},
-  pages={1--22},
-  year={1977},
-  publisher={Wiley Online Library}
+author = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
+title = {Maximum Likelihood from Incomplete Data Via the EM Algorithm},
+journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
+volume = {39},
+number = {1},
+pages = {1-22},
+keywords = {maximum likelihood, incomplete data, em algorithm, posterior mode},
+doi = {https://doi.org/10.1111/j.2517-6161.1977.tb01600.x},
+url = {https://rss.onlinelibrary.wiley.com/doi/abs/10.1111/j.2517-6161.1977.tb01600.x},
+year = {1977}
 }
 
 @Manual{r,
@@ -1490,15 +1495,14 @@ doi = {10.1201/9781420072884-c30}
 }
 
 @article{metropolis1953equation,
-  title={Equation of state calculations by fast computing machines},
+  title={Equation of State Calculations by Fast Computing Machines},
   author={Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth, Marshall N and Teller, Augusta H and Teller, Edward},
-  journal={The journal of chemical physics},
+  journal={J. Chem. Phys},
   volume={21},
-  number={6},
-  pages={1087--1092},
-  year={1953},
-  publisher={AIP}
+  pages={1087},
+  year={1953}
 }
+
 
 @article{hastings1970monte,
   title={Monte Carlo sampling methods using Markov chains and their applications},
@@ -1514,12 +1518,16 @@ doi = {10.1201/9781420072884-c30}
     year={2017}
 }
 
-
 @article{berger2006case,
-  title={The case for objective Bayesian analysis},
+  title={The Case for objective Bayesian analysis},
   author={Berger, James},
+  journal={Bayesian Analysis},
+  volume={1},
+  number={3},
+  pages={385--402},
   year={2006}
 }
+
 
 @article{martin2023computing,
   title={Computing Bayes: From then ‘til now},
@@ -1676,7 +1684,6 @@ doi = {10.1201/9781420072884-c30}
   year={2023}
 }
 
-
 @article{neal2003slice,
   title={Slice sampling},
   author={Neal, Radford M},
@@ -1804,7 +1811,7 @@ doi = {10.1201/9781420072884-c30}
 @article{bollhofer2020state,
   title={State-of-the-art sparse direct solvers},
   author={Bollh{\"o}fer, Matthias and Schenk, Olaf and Janalik, Radim and Hamm, Steve and Gullapalli, Kiran},
-  journal={Parallel algorithms in computational science and engineering},
+  journal={Parallel Algorithms in Computational Science and Engineering},
   pages={3--33},
   year={2020},
   publisher={Springer}
@@ -1815,262 +1822,6 @@ doi = {10.1201/9781420072884-c30}
   author={Wood, Simon N},
   year={2017},
   publisher={CRC press}
-}
-
-@article{hastie1987generalized,
-  title={Generalized additive models: some applications},
-  author={Hastie, Trevor and Tibshirani, Robert},
-  journal={Journal of the American Statistical Association},
-  volume={82},
-  number={398},
-  pages={371--386},
-  year={1987},
-  publisher={Taylor \& Francis}
-}
-
-@article{casella1985introduction,
-  title={An introduction to empirical Bayes data analysis},
-  author={Casella, George},
-  journal={The American Statistician},
-  volume={39},
-  number={2},
-  pages={83--87},
-  year={1985},
-  publisher={Taylor \& Francis}
-}
-
-@incollection{box1992experimental,
-  title={On the experimental attainment of optimum conditions},
-  author={Box, George EP and Wilson, Kenneth B},
-  booktitle={Breakthroughs in statistics: methodology and distribution},
-  pages={270--310},
-  year={1992},
-  publisher={Springer}
-}
-
-@misc{tmbdocumentation,
-  title = {The comprehensive TMB documentation},
-  author = {Kristensen, Kasper},
-  year = {2021},
-  howpublished = {\url{https://kaskr.github.io/adcomp/_book/Introduction.html}},
-  note = {Accessed: June 2, 2023}
-}
-
-@misc{cppaddocumentation,
-  title = {CppAD: a package for C++ algorithmic differentiation},
-  author = {Bell, Bradley},
-  year = {2023},
-  howpublished = {\url{http://www.coin-or.org/CppAD}},
-  note = {Accessed: September 25, 2023}
-}
-
-@article{brooks2017glmmtmb,
-  title={glmmTMB balances speed and flexibility among packages for zero-inflated generalized linear mixed modeling},
-  author={Brooks, Mollie E and Kristensen, Kasper and Van Benthem, Koen J and Magnusson, Arni and Berg, Casper W and Nielsen, Anders and Skaug, Hans J and Machler, Martin and Bolker, Benjamin M},
-  journal={The R journal},
-  volume={9},
-  number={2},
-  pages={378--400},
-  year={2017},
-  publisher={Technische Universitaet Wien}
-}
-
-@article{vstrumbelj2023past,
-  title={Past, Present, and Future of Software for Bayesian Inference},
-  author={{\v{S}}trumbelj, Erik and Bouchard-C{\^o}t{\'e}, Alexandre and Corander, Jukka and Gelman, Andrew and Rue, H{\aa}vard and Murray, Lawrence and Pesonen, Henri and Plummer, Martyn and Vehtari, Aki},
-  year={2023}
-}
-
-@article{van2023new,
-  title={A new avenue for Bayesian inference with INLA},
-  author={Van Niekerk, Janet and Krainski, Elias and Rustand, Denis and Rue, H{\aa}vard},
-  journal={Computational Statistics \& Data Analysis},
-  volume={181},
-  pages={107692},
-  year={2023},
-  publisher={Elsevier}
-}
-
-@book{press2007numerical,
-  title={Numerical recipes 3rd edition: The art of scientific computing},
-  author={Press, William H and Teukolsky Saul A and Vetterling, William T and Flannery, Brian P},
-  year={2007},
-  publisher={Cambridge university press}
-}
-
-@Article{lenth2009rsm,
-  title = {Response-Surface Methods in {R}, Using {rsm}},
-  author = {Russell Lenth},
-  journal = {Journal of Statistical Software},
-  year = {2009},
-  volume = {32},
-  number = {7},
-  pages = {1--17},
-  doi = {10.18637/jss.v032.i07},
-}
-
-@article{gelman1992inference,
-  title={Inference from iterative simulation using multiple sequences},
-  author={Gelman, Andrew and Rubin, Donald B},
-  journal={Statistical science},
-  pages={457--472},
-  year={1992},
-  publisher={JSTOR}
-}
-
-@article{vehtari2021rank,
-  title={{Rank-normalization, folding, and localization: an improved R for assessing convergence of MCMC (with discussion)}},
-  author={Vehtari, Aki and Gelman, Andrew and Simpson, Daniel and Carpenter, Bob and B{\"u}rkner, Paul-Christian},
-  journal={Bayesian analysis},
-  volume={16},
-  number={2},
-  pages={667--718},
-  year={2021},
-  publisher={International Society for Bayesian Analysis}
-}
-
-@Manual{nimblemanual,
-  title = {{NIMBLE} User Manual},
-  author = {Perry {de Valpine} and Christopher Paciorek and Daniel
-    Turek and Nick Michaud and Cliff Anderson-Bergman and Fritz
-    Obermeyer and Claudia {Wehrhahn Cortes} and Abel Rodrìguez and
-    Duncan {Temple Lang} and Sally Paganin},
-  url = {https://r-nimble.org},
-  year = {2023},
-  version = {1.0.1},
-  note = {{R} package manual version 1.0.1},
-  doi = {10.5281/zenodo.1211190},
-}
-
-@Manual{cranlogs,
-  title = {cranlogs: Download Logs from the 'RStudio' 'CRAN' Mirror},
-  author = {Gábor Csárdi},
-  year = {2023},
-  note = {https://github.com/r-hub/cranlogs, https://r-hub.github.io/cranlogs},
-}
-
-@article{esra2023improved,
-  title={Improved indicators for subnational unmet antiretroviral therapy need in the health system: updates to the Naomi model in 2023},
-  author={Esra, Rachel},
-  year={2023}
-}
-
-@article{stover2019updates,
-  title={Updates to the Spectrum/AIM model for estimating key HIV indicators at national and subnational levels},
-  author={Stover, John and Glaubius, Robert and Mofenson, Lynne and Dugdale, Caitlin M and Davies, Mary-Ann and Patten, Gabriela and Yiannoutsos, Constantin},
-  journal={AIDS (London, England)},
-  volume={33},
-  number={Suppl 3},
-  pages={S227},
-  year={2019},
-  publisher={Wolters Kluwer Health}
-}
-
-@article{hamelijnck2019multi,
-  title={Multi-resolution multi-task Gaussian processes},
-  author={Hamelijnck, O and Damoulas, T and Wang, K and Girolami, MA},
-  journal={Advances in Neural Information Processing Systems},
-  volume={32},
-  year={2019}
-}
-
-@article{kelsall2002modeling,
-  title={Modeling spatial variation in disease risk: a geostatistical approach},
-  author={Kelsall, Julia and Wakefield, Jonathan},
-  journal={Journal of the American Statistical Association},
-  volume={97},
-  number={459},
-  pages={692--701},
-  year={2002},
-  publisher={Taylor \& Francis}
-}
-
-@article{law2018variational,
-  title={Variational learning on aggregate outputs with Gaussian processes},
-  author={Law, Ho Chung and Sejdinovic, Dino and Cameron, Ewan and Lucas, Tim and Flaxman, Seth and Battle, Katherine and Fukumizu, Kenji},
-  journal={Advances in Neural Information Processing Systems},
-  volume={31},
-  year={2018}
-}
-
-@inproceedings{tanaka2019spatially,
-  title={{Spatially aggregated Gaussian processes with multivariate areal outputs}},
-  author={Tanaka, Yusuke and Tanaka, Toshiyuki and Iwata, Tomoharu and Kurashima, Takeshi and Okawa, Maya and Akagi, Yasunori and Toda, Hiroyuki},
-  booktitle={Advances in Neural Information Processing Systems},
-  pages={3005--3015},
-  year={2019}
-}
-
-@article{teh2021efficient,
-  title={Efficient Bayesian Inference of Instantaneous Re-production Numbers at Fine Spatial Scales, with an Application to Mapping and Nowcasting the Covid-19 Epidemic in British Local Authorities},
-  author={Teh, Yee Whye and Bhoopchand, Avishkar and Diggle, Peter and Elesedy, Bryn and He, Bobby and Hutchinson, Michael and Paquet, Ulrich and Read, Jonathan and Tomasev, Nenad and Zaidi, Sheheryar},
-  journal={URL https://rss. org. uk/RSS/media/File-library/News/2021/WhyeBhoopchand. pdfhttps://localcovid. info/2},
-  year={2021}
-}
-
-@article{utazi2019spatial,
-  title={A spatial regression model for the disaggregation of areal unit based data to high-resolution grids with application to vaccination coverage mapping},
-  author={Utazi, C Edson and Thorley, Julia and Alegana, VA and Ferrari, MJ and Nilsen, Kristine and Takahashi, Saki and Metcalf, CJE and Lessler, Justin and Tatem, AJ},
-  journal={Statistical Methods in Medical Research},
-  volume={28},
-  number={10-11},
-  pages={3226--3241},
-  year={2019},
-  publisher={SAGE Publications Sage UK: London, England}
-}
-
-@article{wakefield1999spatial,
-  title={Spatial dependence and errors-in-variables in environmental epidemiology},
-  author={Wakefield, J and Morris, S},
-  journal={Bayesian statistics},
-  volume={6},
-  pages={657--684},
-  year={1999},
-  publisher={Clarendon Press Oxford}
-}
-
-@article{yousefi2019multi,
-  title={Multi-task learning for aggregated data using Gaussian processes},
-  author={Yousefi, Fariba and Smith, Michael T and Alvarez, Mauricio},
-  journal={Advances in Neural Information Processing Systems},
-  volume={32},
-  year={2019}
-}
-
-@article{cramb2018investigation,
-  title={Investigation of Bayesian spatial models},
-  author={Cramb, SM and Duncan, EW and Baade, PD and Mengersen, KL},
-  year={2018},
-  publisher={Cancer Council Queensland and Queensland University of Technology (QUT)}
-}
-
-@book{haining2003spatial,
-  title={Spatial data analysis: theory and practice},
-  author={Haining, Robert P},
-  year={2003},
-  publisher={Cambridge university press}
-}
-
-@article{diggle2013spatial,
-  title={Spatial and spatio-temporal log-Gaussian Cox processes: extending the geostatistical paradigm},
-  author={Diggle, Peter J and Moraga, Paula and Rowlingson, Barry and Taylor, Benjamin M and others},
-  journal={Statistical Science},
-  volume={28},
-  number={4},
-  pages={542--563},
-  year={2013},
-  publisher={Institute of Mathematical Statistics}
-}
-
-@article{gossl2001bayesian,
-  title={Bayesian spatiotemporal inference in functional magnetic resonance imaging},
-  author={G{\"o}ssl, Christoff and Auer, Dorothee P and Fahrmeir, Ludwig},
-  journal={Biometrics},
-  volume={57},
-  number={2},
-  pages={554--562},
-  year={2001},
-  publisher={Wiley Online Library}
 }
 
 @article{dwyer2015drinking,
@@ -2146,11 +1897,14 @@ doi = {10.1201/9781420072884-c30}
   publisher={Wiley Online Library}
 }
 
-@article{fattah2021smart,
-  title={Smart Gradient--An Adaptive Technique for Improving Gradient Estimation},
-  author={Fattah, Esmail Abdul and Van Niekerk, Janet and Rue, H{\aa}vard},
-  journal={arXiv preprint arXiv:2106.07313},
-  year={2021}
+@misc{fattah2022smart,
+  title={Smart gradient-an adaptive technique for improving gradient estimation},
+  journal={Foundations of Data Science},
+  volume={4},
+  number={1},
+  pages={123--136},
+  author={Fattah, EA and Niekerk, JV and Rue, H},
+  year={2022}
 }
 
 @article{pisani2003hiv,
@@ -2262,7 +2016,7 @@ doi = {10.1201/9781420072884-c30}
 @article{margossian2019review,
   title={A review of automatic differentiation and its efficient implementation},
   author={Margossian, Charles C},
-  journal={Wiley interdisciplinary reviews: data mining and knowledge discovery},
+  journal={Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
   volume={9},
   number={4},
   pages={e1305},
@@ -2337,7 +2091,7 @@ doi = {10.1201/9781420072884-c30}
 @article{brier1950verification,
   title={Verification of forecasts expressed in terms of probability},
   author={Brier, Glenn W},
-  journal={Monthly weather review},
+  journal={Monthly Weather Review},
   volume={78},
   number={1},
   pages={1--3},
@@ -2358,7 +2112,7 @@ doi = {10.1201/9781420072884-c30}
 @article{konstantinoudis2020discrete,
   title={Discrete versus continuous domain models for disease mapping},
   author={Konstantinoudis, Garyfallos and Schuhmacher, Dominic and Rue, H{\aa}vard and Spycher, Ben D},
-  journal={Spatial and spatio-temporal epidemiology},
+  journal={Spatial and Spatio-temporal Epidemiology},
   volume={32},
   pages={100319},
   year={2020},
@@ -2487,14 +2241,14 @@ doi = {10.1201/9781420072884-c30}
   title = {arealutils: Utility functions for beyond-borders},
   author = {Adam Howes},
   year = {2023},
-  note = {R package version 0.0.1},
+  note = {R package version 0.0.1}
 }
 
 @Manual{howes2023multiutils,
   title = {multi.utils: Utility functions for multi-agyw},
   author = {Adam Howes},
   year = {2023},
-  note = {R package version 0.1.0},
+  note = {R package version 0.1.0}
 }
 
 @article{bosse2023scoring,
@@ -2506,4 +2260,268 @@ doi = {10.1201/9781420072884-c30}
   pages={e1011393},
   year={2023},
   publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{utazi2019spatial,
+  title={A spatial regression model for the disaggregation of areal unit based data to high-resolution grids with application to vaccination coverage mapping},
+  author={Utazi, C Edson and Thorley, Julia and Alegana, VA and Ferrari, MJ and Nilsen, Kristine and Takahashi, Saki and Metcalf, CJE and Lessler, Justin and Tatem, AJ},
+  journal={Statistical Methods in Medical Research},
+  volume={28},
+  number={10-11},
+  pages={3226--3241},
+  year={2019},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{wakefield1999spatial,
+  title={Spatial dependence and errors-in-variables in environmental epidemiology},
+  author={Wakefield, J and Morris, S},
+  journal={Bayesian statistics},
+  volume={6},
+  pages={657--684},
+  year={1999},
+  publisher={Clarendon Press Oxford}
+}
+
+@article{yousefi2019multi,
+  title={Multi-task learning for aggregated data using Gaussian processes},
+  author={Yousefi, Fariba and Smith, Michael T and Alvarez, Mauricio},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  year={2019}
+}
+
+@article{cramb2018investigation,
+  title={Investigation of Bayesian spatial models},
+  author={Cramb, SM and Duncan, EW and Baade, PD and Mengersen, KL},
+  year={2018},
+  publisher={Cancer Council Queensland and Queensland University of Technology (QUT)}
+}
+
+@book{haining2003spatial,
+  title={Spatial data analysis: theory and practice},
+  author={Haining, Robert P},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+
+@article{diggle2013spatial,
+  title={Spatial and spatio-temporal log-Gaussian Cox processes: extending the geostatistical paradigm},
+  author={Diggle, Peter J and Moraga, Paula and Rowlingson, Barry and Taylor, Benjamin M and others},
+  journal={Statistical Science},
+  volume={28},
+  number={4},
+  pages={542--563},
+  year={2013},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{gossl2001bayesian,
+  title={Bayesian spatiotemporal inference in functional magnetic resonance imaging},
+  author={G{\"o}ssl, Christoff and Auer, Dorothee P and Fahrmeir, Ludwig},
+  journal={Biometrics},
+  volume={57},
+  number={2},
+  pages={554--562},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@Manual{cranlogs,
+  title = {cranlogs: Download Logs from the 'RStudio' 'CRAN' Mirror},
+  author = {Gábor Csárdi},
+  year = {2023},
+  note = {https://github.com/r-hub/cranlogs, https://r-hub.github.io/cranlogs},
+}
+
+@article{esra2023improved,
+  title={Improved indicators for subnational unmet antiretroviral therapy need in the health system: updates to the Naomi model in 2023},
+  author={Esra, Rachel},
+  year={2023}
+}
+
+@article{stover2019updates,
+  title={Updates to the Spectrum/AIM model for estimating key HIV indicators at national and subnational levels},
+  author={Stover, John and Glaubius, Robert and Mofenson, Lynne and Dugdale, Caitlin M and Davies, Mary-Ann and Patten, Gabriela and Yiannoutsos, Constantin},
+  journal={AIDS (London, England)},
+  volume={33},
+  number={Suppl 3},
+  pages={S227},
+  year={2019},
+  publisher={Wolters Kluwer Health}
+}
+
+@article{hamelijnck2019multi,
+  title={Multi-resolution multi-task Gaussian processes},
+  author={Hamelijnck, O and Damoulas, T and Wang, K and Girolami, MA},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  year={2019}
+}
+
+@article{kelsall2002modeling,
+  title={Modeling spatial variation in disease risk: a geostatistical approach},
+  author={Kelsall, Julia and Wakefield, Jonathan},
+  journal={Journal of the American Statistical Association},
+  volume={97},
+  number={459},
+  pages={692--701},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{law2018variational,
+  title={Variational learning on aggregate outputs with Gaussian processes},
+  author={Law, Ho Chung and Sejdinovic, Dino and Cameron, Ewan and Lucas, Tim and Flaxman, Seth and Battle, Katherine and Fukumizu, Kenji},
+  journal={Advances in Neural Information Processing Systems},
+  volume={31},
+  year={2018}
+}
+
+@inproceedings{tanaka2019spatially,
+  title={{Spatially aggregated Gaussian processes with multivariate areal outputs}},
+  author={Tanaka, Yusuke and Tanaka, Toshiyuki and Iwata, Tomoharu and Kurashima, Takeshi and Okawa, Maya and Akagi, Yasunori and Toda, Hiroyuki},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3005--3015},
+  year={2019}
+}
+
+@article{brooks2017glmmtmb,
+  title={glmmTMB balances speed and flexibility among packages for zero-inflated generalized linear mixed modeling},
+  author={Brooks, Mollie E and Kristensen, Kasper and Van Benthem, Koen J and Magnusson, Arni and Berg, Casper W and Nielsen, Anders and Skaug, Hans J and Machler, Martin and Bolker, Benjamin M},
+  journal = {{The R Journal}},
+  volume={9},
+  number={2},
+  pages={378--400},
+  year={2017},
+  publisher={Technische Universitaet Wien}
+}
+
+@article{vstrumbelj2023past,
+  title={Past, Present, and Future of Software for Bayesian Inference},
+  author={{\v{S}}trumbelj, Erik and Bouchard-C{\^o}t{\'e}, Alexandre and Corander, Jukka and Gelman, Andrew and Rue, H{\aa}vard and Murray, Lawrence and Pesonen, Henri and Plummer, Martyn and Vehtari, Aki},
+  year={2023}
+}
+
+@article{van2023new,
+  title={A new avenue for Bayesian inference with INLA},
+  author={Van Niekerk, Janet and Krainski, Elias and Rustand, Denis and Rue, H{\aa}vard},
+  journal={Computational Statistics \& Data Analysis},
+  volume={181},
+  pages={107692},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@book{press2007numerical,
+  title={Numerical recipes 3rd edition: The art of scientific computing},
+  author={Press, William H and Teukolsky Saul A and Vetterling, William T and Flannery, Brian P},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+
+@Article{lenth2009rsm,
+  title = {Response-Surface Methods in {R}, Using {rsm}},
+  author = {Russell Lenth},
+  journal = {Journal of Statistical Software},
+  year = {2009},
+  volume = {32},
+  number = {7},
+  pages = {1--17},
+  doi = {10.18637/jss.v032.i07},
+}
+
+@article{gelman1992inference,
+  title={Inference from iterative simulation using multiple sequences},
+  author={Gelman, Andrew and Rubin, Donald B},
+  journal={Statistical Science},
+  pages={457--472},
+  year={1992},
+  publisher={JSTOR}
+}
+
+@article{vehtari2021rank,
+  title={{Rank-normalization, folding, and localization: an improved R for assessing convergence of MCMC (with discussion)}},
+  author={Vehtari, Aki and Gelman, Andrew and Simpson, Daniel and Carpenter, Bob and B{\"u}rkner, Paul-Christian},
+  journal={Bayesian analysis},
+  volume={16},
+  number={2},
+  pages={667--718},
+  year={2021},
+  publisher={International Society for Bayesian Analysis}
+}
+
+@Manual{nimblemanual,
+  title = {{NIMBLE} User Manual},
+  author = {Perry {de Valpine} and Christopher Paciorek and Daniel
+    Turek and Nick Michaud and Cliff Anderson-Bergman and Fritz
+    Obermeyer and Claudia {Wehrhahn Cortes} and Abel Rodrìguez and
+    Duncan {Temple Lang} and Sally Paganin},
+  url = {https://r-nimble.org},
+  year = {2023},
+  version = {1.0.1},
+  note = {{R} package manual version 1.0.1},
+  doi = {10.5281/zenodo.1211190},
+}
+
+@article{hastie1987generalized,
+  title={Generalized additive models: some applications},
+  author={Hastie, Trevor and Tibshirani, Robert},
+  journal={Journal of the American Statistical Association},
+  volume={82},
+  number={398},
+  pages={371--386},
+  year={1987},
+  publisher={Taylor \& Francis}
+}
+
+@article{casella1985introduction,
+  title={An introduction to empirical Bayes data analysis},
+  author={Casella, George},
+  journal={The American Statistician},
+  volume={39},
+  number={2},
+  pages={83--87},
+  year={1985},
+  publisher={Taylor \& Francis}
+}
+
+@incollection{box1992experimental,
+  title={On the experimental attainment of optimum conditions},
+  author={Box, George EP and Wilson, Kenneth B},
+  booktitle={Breakthroughs in Statistics: Methodology and Distribution},
+  pages={270--310},
+  year={1992},
+  publisher={Springer}
+}
+
+@misc{tmbdocumentation,
+  title = {The comprehensive TMB documentation},
+  author = {Kristensen, Kasper},
+  year = {2021},
+  howpublished = {\url{https://kaskr.github.io/adcomp/_book/Introduction.html}},
+  note = {Accessed: June 2, 2023}
+}
+
+@misc{cppaddocumentation,
+  title = {CppAD: a package for C++ algorithmic differentiation},
+  author = {Bell, Bradley},
+  year = {2023},
+  howpublished = {\url{http://www.coin-or.org/CppAD}},
+  note = {Accessed: September 25, 2023}
+}
+
+
+@article{teh2021efficient,
+    author = {Teh, Yee Whye and Elesedy, Bryn and He, Bobby and Hutchinson, Michael and Zaidi, Sheheryar and Bhoopchand, Avishkar and Paquet, Ulrich and Tomasev, Nenad and Read, Jonathan and Diggle, Peter J.},
+    title = {Efficient Bayesian inference of Instantaneous Reproduction Numbers at Fine Spatial Scales, with an Application to Mapping and Nowcasting the Covid-19 Epidemic in British Local Authorities},
+    journal = {Journal of the Royal Statistical Society Series A: Statistics in Society},
+    volume = {185},
+    number = {1},
+    pages = {S65-S85},
+    year = {2022},
+    month = {12},
+    issn = {0964-1998},
+    doi = {10.1111/rssa.12971},
+    url = {https://doi.org/10.1111/rssa.12971}
 }
