--- a/references.bib
+++ b/references.bib
@@ -2525,3 +2525,69 @@ year = {1977}
     doi = {10.1111/rssa.12971},
     url = {https://doi.org/10.1111/rssa.12971}
 }
+
+@article{arambepola2022simulation,
+  title={A simulation study of disaggregation regression for spatial disease mapping},
+  author={Arambepola, Rohan and Lucas, Tim CD and Nandi, Anita K and Gething, Peter W and Cameron, Ewan},
+  journal={Statistics in Medicine},
+  volume={41},
+  number={1},
+  pages={1--16},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{rashid2023inequalities,
+author = {Rashid, T and Bennett, JE and Muller, D and Cross, A and Pearson-Stuttard, J and Daby, H and Fecht, D and Davies, B and Ezzati, M},
+journal = {The Lancet Oncology},
+title = {Inequalities in mortality from leading cancers in districts of England from 2002 to 2019: population-based high-resolution spatiotemporal analysis of vital registration data},
+url = {http://hdl.handle.net/10044/1/107364},
+year = {2023}
+}
+
+@article{li2012spatial,
+  title={Spatial modelling of lupus incidence over 40 years with changes in census areas},
+  author={Li, Ye and Brown, Patrick and Rue, H{\aa}vard and Al-Maini, Mustafa and Fortin, Paul},
+  journal={Journal of the Royal Statistical Society Series C: Applied Statistics},
+  volume={61},
+  number={1},
+  pages={99--115},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+@article{li2012lgcp,
+author = {Ye Li and Patrick Brown and Dionne C Gesink and Håvard Rue},
+title ={Log Gaussian Cox processes and spatially aggregated disease incidence data},
+journal = {Statistical Methods in Medical Research},
+volume = {21},
+number = {5},
+pages = {479-507},
+year = {2012},
+doi = {10.1177/0962280212446326},
+note ={PMID: 22544855},
+URL = {https://doi.org/10.1177/0962280212446326},
+}
+
+@article{paciorek2006spatial,
+author = {Paciorek, Christopher J. and Schervish, Mark J.},
+title = {Spatial modelling using a new class of nonstationary covariance functions},
+journal = {Environmetrics},
+volume = {17},
+number = {5},
+pages = {483-506},
+keywords = {smoothing, Gaussian process, kriging, kernel convolution},
+doi = {https://doi.org/10.1002/env.785},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/env.785},
+year = {2006}
+}
+
+@inproceedings{flaxman2015supported,
+  title={Who supported Obama in 2012? Ecological inference through distribution regression},
+  author={Flaxman, Seth R and Wang, Yu-Xiang and Smola, Alexander J},
+  booktitle={Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={289--298},
+  year={2015}
+}
+
+
