--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -30,7 +30,7 @@ knitr::include_graphics("../figures/beyond-borders/geometry-graph.png")
 
 #
 
-```{r intercept-comparison, echo=FALSE, out.width="95%"}
+```{r intercept-comparison, echo=FALSE, out.width="70%", fig.align = 'center'}
 knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
 ```
 
